# BLEDroneCode

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  README.rst  nrf5340dk_app_sr_net.conf  nrf5340dk_mcuboot_sr_net.conf  prj.conf  prj_cdc.conf  prj_minimal.conf  sample.yaml
assets/: connection_diagram.ai
boards/: nrf5340_cpuapp_common-pinctrl.overlay  nrf5340dk_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
src/: commands.c  commands.h  includes.h  main.c  uart_async_adapter.c
src/drivers/GPIO_INPUT/: gpio_input_local.c  gpio_input_local.h
src/drivers/PWM/: pwm_local.c  pwm_local.h
src/drivers/SPIM/: spim_local.c  spim_local.h
src/drivers/TWIM/: mcu.h  twim_local.c  twim_local.h
src/sensors/AbsoluteBarometricPressure_BMP585/: common.c  common.h  read_sensor_data_normal_mode.c
src/sensors/IMU_CEVA_FSM300/: cal_app.c  ceva_fsm300.c  ceva_fsm300.h  ceva_fsmSH2.c  ceva_fsmSH2.h  demo_app.c  demo_app.h  sh2_hal_init.h
src/sensors/PowerMeter_TI_INA228/: INA228.c  INA228.h  ReadMe.md  config.c  config.h  mcu.c
src/sensors/TOF_ST_VL53L8/: Example_11_motion_indicator_with_detection_thresholds.c  Example_11_motion_indicator_with_detection_thresholds_VL53L8CX.c  Example_1_ranging_basic.c  tof_vl53l8.c  tof_vl53l8.h
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/: changelog.txt
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/CubeIDE_F401RE_Example/: .cproject  .mxproject  .project  L8cx_f401.ioc  STM32F401RETX_FLASH.ld
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/CubeIDE_F401RE_Example/Core/Inc/: main.h  platform.h  stm32f4xx_it.h
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/CubeIDE_F401RE_Example/Core/Src/: main.c  platform.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/CubeIDE_F401RE_Example/Drivers/BSP/Components/VL53L8CX_ULD_API/inc/: vl53l8cx_buffers.h
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/CubeIDE_F401RE_Example/Drivers/BSP/Components/VL53L8CX_ULD_API/src/: vl53l8cx_api.c
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/Examples/: Example_10_motion_indicator.c  Example_11_motion_indicator_with_detection_thresholds.c  Example_1_ranging_basic.c  Example_2_get_set_params.c  Example_3_ranging_modes.c  Example_4_power_modes.c  Example_5_multiple_targets_per_zone.c  Example_6_I2C_and_RAM_optimization.c  Example_7_calibrate_xtalk.c  Example_8_vizualize_xtalk_data.c  Example_9_detection_thresholds.c
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/Platform/: platform.c  platform.h
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/VL53L8CX_ULD_API/inc/: vl53l8cx_api.h  vl53l8cx_buffers.h
src/sensors/TOF_ST_VL53L8/VL53L8CX_ULD_driver_1.2.1/VL53L8CX_ULD_API/src/: vl53l8cx_api.c  vl53l8cx_plugin_detection_thresholds.c  vl53l8cx_plugin_motion_indicator.c  vl53l8cx_plugin_xtalk.c
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/: .cproject  .mxproject  .project  VL53LMZ_ULD_MassMarket_Test.ioc
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/Core/Inc/: main.h  stm32f4xx_it.h
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/Platform/: platform.c  platform.h
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/VL53LMZ_ULD_API/: changelog.txt
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/VL53LMZ_ULD_API/inc/: vl53lmz_api.h  vl53lmz_buffers.h  vl53lmz_plugin_cnh.h  vl53lmz_plugin_detection_thresholds.h  vl53lmz_plugin_motion_indicator.h  vl53lmz_plugin_xtalk.h
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/CubeIDE_F401RE_Example/VL53LMZ_ULD_API/src/: vl53lmz_api.c  vl53lmz_plugin_cnh.c  vl53lmz_plugin_detection_thresholds.c  vl53lmz_plugin_motion_indicator.c  vl53lmz_plugin_xtalk.c
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/Examples/: Example_10_motion_indicator.c  Example_11_motion_indicator_with_detection_thresholds.c  Example_12_cnh_data.c  Example_1_ranging_basic.c  Example_2_get_set_params.c  Example_3_ranging_modes.c  Example_4_power_modes.c  Example_5_multiple_targets_per_zone.c  Example_6_I2C_and_RAM_optimization.c  Example_7_calibrate_xtalk.c  Example_8_vizualize_xtalk_data.c  Example_9_detection_thresholds.c
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/Platform/: platform.c  platform.h
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/VL53LMZ_ULD_API/inc/: vl53lmz_api.h  vl53lmz_buffers.h
src/sensors/TOF_ST_VL53L8/VL53LMZ_ULD_v2.0.10/VL53LMZ_ULD_API/src/: vl53lmz_api.c  vl53lmz_plugin_cnh.c  vl53lmz_plugin_detection_thresholds.c  vl53lmz_plugin_motion_indicator.c  vl53lmz_plugin_xtalk.c
